<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="nikodem_gortych.fftapp.Fragment_FFT">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/chart_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/checkbox_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="13dp">

        <CheckBox
            android:id="@+id/x_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/x_axis"
            android:textColor="@color/X_axis" />

        <CheckBox
            android:id="@+id/y_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/y_axis"
            android:textColor="@color/Y_axis" />

        <CheckBox
            android:id="@+id/z_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/z_axis"
            android:textColor="@color/Z_axis" />
    </LinearLayout>

</LinearLayout>
