<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBarTableSize"
            android:paddingBottom="3dp"
            android:paddingLeft="15dp"
            android:text="@string/table_size" />

        <SeekBar
            android:id="@+id/seekBarTableSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:max="292"
            android:onClick="setSeekBarTableSize"
            android:progress="64" />

        <TextView
            android:id="@+id/seekBarTableSizeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBarTableSize"
            android:gravity="center_horizontal"
            android:text="TextView" />
    </RelativeLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinner"
            android:paddingBottom="3dp"
            android:paddingLeft="15dp"
            android:text="@string/library" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:entries="@array/library_arrays" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBarSensorSpeed"
            android:paddingBottom="3dp"
            android:paddingLeft="15dp"
            android:text="@string/sensor_speed" />

        <SeekBar
            android:id="@+id/seekBarSensorSpeed"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:max="3"
            android:progress="1" />


        <TextView
            android:id="@+id/seekBarSensorSpeedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBarSensorSpeed"
            android:gravity="center_horizontal"
            android:text="TextView" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/infTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/infTextView2"
            android:gravity="center_horizontal"
            android:text="Tiew" />

        <TextView
            android:id="@+id/infTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/infTextView3"
            android:gravity="center_horizontal"
            android:text="Tiew" />

        <TextView
            android:id="@+id/infTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="Tiew" />
    </RelativeLayout>


</LinearLayout>
